Fix select toggler overflow

--- a/src/assets/styles/components/inputs/_select.scss
+++ b/src/assets/styles/components/inputs/_select.scss
@@ -30,6 +30,7 @@
       display: flex !important;
       align-items: center;
       transition: border .5s ease !important;
+      max-width: 100%;
       &:not(:hover) {
         border: 1px solid rgba(var(--grey), 1) !important;
       }
@@ -43,6 +44,7 @@
         right: 0;
         position: relative;
         top: 0;
+        flex-shrink: 0;
       }
       &_active {
         svg {
